# ecci

./: .dockerignore  .editorconfig  .gitignore  .tagpr  AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  action.yml  entrypoint.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/: autolabeler.yml  dependabot.yml  pr-labeler.yml  release-drafter.yml  release.yml
.github/workflows/: action-lint.yml  docker-build.yml  hadolint.yml  main.yml  pr-labeler.yml  pr-size-labeler.yml  pull_request.yml  release-drafter.yml  tagpr.yml  update-semver.yml
crates/ecci/: Cargo.toml
crates/ecci-checker/: Cargo.toml
crates/ecci-checker/src/: charset.rs  end_of_line.rs  indent_size.rs  indent_style.rs  insert_final_newline.rs  lib.rs  max_line_length.rs  (+2 more)
crates/ecci-editorconfig/: Cargo.toml  bindgen.sh  build.rs
crates/ecci-report/: Cargo.toml
crates/ecci/src/: action.rs  binary.rs  lib.rs  main.rs  selection.rs
crates/ecci/tests/: action.rs  cli.rs  container-entrypoint.sh
crates/ecci/tests/fixtures/: action-workflow.yml
crates/ecci/tests/fixtures/release-semantics/: .ecciignore  .editorconfig  .gitignore
crates/ecci/tests/fixtures/release-semantics/nested/: .editorconfig
docs/design/: README.md  binary-file-detection.md  cli-diagnostics-and-github-action.md  cli-file-selection.md  documentation-governance.md
docs/development/: README.md
docs/user/: README.md  cli.md  ecciignore.md  github-action.md
testdata/: generate.sh
testdata/simple/: .editorconfig
testdata/trim_trailing_whitespace/: .editorconfig  error.target
(+94 files in other folders)
