[package]
name = "ecci"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ecci-editorconfig = { version = "0.0.0", path = "../ecci-editorconfig" }
ignore = "0.4"
same-file = "1"

[dev-dependencies]
tempfile = "3"
