[package]
name = "ecci"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", features = ["derive"] }
ecci-checker = { version = "0.0.0", path = "../ecci-checker" }
ecci-editorconfig = { version = "0.0.0", path = "../ecci-editorconfig" }
ecci-report = { version = "0.0.0", path = "../ecci-report" }
ignore = "0.4"
same-file = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
